--- a/LeagueAssistWeb/Views/Home/Index.cshtml
+++ b/LeagueAssistWeb/Views/Home/Index.cshtml
@@ -1,36 +1,98 @@
-﻿@model IEnumerable<LeagueAssistWeb.Models.PlayerListViewModel>
+﻿@model PagedList.IPagedList<LeagueAssistWeb.Models.PlayerListViewModel>
+@Scripts.Render("~/scripts/jquery-1.10.2.min.js")
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@{
-    ViewBag.Title = "Popis igrača";
-}
+<form id="form1" action=@Url.Action("Index", new {
+                       sortOrder = ViewBag.CurrentSort, currentNazivFilter = ViewBag.NazivFilter,
+                       currentKraticaFilter = ViewBag.KraticaFilter,
+                       currentErasmusKodFilter = ViewBag.ErasmusKodFilter, currentURLFilter = ViewBag.URLFilter })
+      method="get">
 
-<h2>@ViewBag.Title</h2>
+    @{
+        ViewBag.Title = "Popis igrača";
+    }
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th></th>
-    </tr>
+    <h2>@ViewBag.Title</h2>
+    <hr />
+    <br />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditPlayer", new { id=item.Id }) |
-            @Html.ActionLink("Details", "PlayerDetails", new { id=item.Id }) |
-            @Html.ActionLink("End Contract", "EndPlayerContract", new { id=item.Id })
-        </td>
-    </tr>
-}
+    <table class="table table-hover">
+        <tr style="border-bottom: none">
+            <th class="col-xs-4" style="border-bottom: none">
+                Ime
+            </th>
+            <th class="col-xs-4" style="border-bottom: none">
+                Prezime
+            </th>
+            <th class="col-xs-1" style="border-bottom: none;text-align: right">
+            </th>
+        </tr>
+        @if (Model != null)
+        {
+            foreach (var item in Model)
+            {
+                <tr class="table-hover">
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td align="right">
+                        <a href="@Url.Action("Edit", new { id = item.Id })" style="margin-right:10px">
+                            <i class="glyphicon glyphicon-pencil"></i>
+                            <span class="sr-only">Uredi</span>
+                        </a>
+                        <a href="@Url.Action("EndPlayerContract", new { id = item.Id })">
+                            <i class="glyphicon glyphicon-ban-circle"></i>
+                            <span class="sr-only">Obriši</span>
+                        </a>
+                    </td>
+                </tr>
+            }
+        }
+    </table>
 
-</table>
+    <br />
+    <p>
+        <div class="form-group">
+            <div class="col-xs-6" align="left">
+                <b>Prikaz @Html.DropDownList("pageItems", ViewData["ItemsPerPage"] as SelectList, htmlAttributes: new { @class = "input-sm", @style = "width:65px; height:25px" }) po stranici</b>
+            </div>
+            <div class="col-xs-4" align="right">
+                <a href="@Url.Action("Create")" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-plus-sign"></span>
+                    Registriraj postojećeg igrača
+                </a>
+            </div>
+            <div class="col-xs-2" align="right">
+                <a href="@Url.Action("Create")" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-plus-sign"></span>
+                    Registriraj novog igrača
+                </a>
+            </div>
+        </div>
+    </p>
+    <br />
+    <br />
+    <div align="center">
+        <div style="display:inline-block">
+            @Html.PagedListPager(Model, page => Url.Action("Index", new
+       {
+           page,
+           pageItems = ViewBag.CurrentPageSize
+       }))
+            Prikazano je @((Model.TotalItemCount == 0) ? 0 : (Model.PageNumber - 1) * Model.PageSize + 1)
+            - @(Model.PageNumber * Model.PageSize > Model.TotalItemCount ? Model.TotalItemCount : (Model.PageNumber * Model.PageSize)) od ukupno @Model.TotalItemCount igrača
+        </div>
+    </div>
+</form>
+
+<script type="text/javascript">
+  $(function(){
+      $('#pageItems').change(function () {
+      $('#form1').submit();
+    });
+  });
+</script>
