--- a/LeagueAssistWeb/Views/Home/EndPlayerContract.cshtml
+++ b/LeagueAssistWeb/Views/Home/EndPlayerContract.cshtml
@@ -1,58 +1,137 @@
 ﻿@model LeagueAssistWeb.Models.PlayerDetailsViewModel
 
 @{
-    ViewBag.Title = "EndPlayerContract";
+    ViewBag.Title = "Raskini ugovor s igračem";
+    ViewBag.Subtitle = "Jeste li sigurni da želite raskinuti ugovor s ovim igračem?";
 }
 
-<h2>EndPlayerContract</h2>
+<h2>@ViewBag.Title</h2>
 
-<div>
-    <h4>PlayerDetailsViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.firstName)
-        </dt>
+<hr />
+<h4>@ViewBag.Subtitle</h4>
+<br />
 
-        <dd>
-            @Html.DisplayFor(model => model.firstName)
-        </dd>
+<div class="row">
+    <div class="col-sm-12">
+        <div class="panel panel-default">
+            <div class="col-sm-12 panel-heading clearfix">
+                <span class="col-sm-6"><b>Podaci o igraču</b></span>
+                <span class="col-sm-6 text-right">
+                </span>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.lastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.birthDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.birthDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.phone)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.phone)
-        </dd>
-
-    </dl>
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <table class="table table-borderless" style="border-top: none">
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Ime:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Email:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Prezime:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Telefon:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Datum rođenja:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-top:none" />
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<hr />
+<br />
+
+<div class="row">
+    <div class="col-sm-12">
+        <div class="panel panel-default">
+            <div class="col-sm-12 panel-heading clearfix">
+                <span class="col-sm-6"><b>Podaci o ugovoru</b></span>
+                <span class="col-sm-6 text-right">
+                </span>
+            </div>
+
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <table class="table table-borderless" style="border-top: none">
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Plaća (god.):</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.contract.annualSalary, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Broj na dresu:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.contract.numberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.contract.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.contract.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Stranac:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.DisplayFor(model => model.contract.foreigner, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-top:none" />
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br />
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <div class="form-group">
+        <div class="col-xs-12" align="right">
+            <a href="@Url.Action("EndPlayerContract")" class="btn btn-danger">
+                <span class="glyphicon glyphicon-ban-circle"></span>
+                Raskini
+            </a>
+        </div>
+    </div>
+</p>
+<br />
+
+<p>
+    @Html.ActionLink("Povratak na popis", "Index")
 </p>
