--- a/LeagueAssistWeb/Views/Home/Index.cshtml
+++ b/LeagueAssistWeb/Views/Home/Index.cshtml
@@ -18,16 +18,18 @@
     <br />
 
     <table class="table table-hover">
-        <tr style="border-bottom: none">
-            <th class="col-xs-4" style="border-bottom: none">
-                Ime
-            </th>
-            <th class="col-xs-4" style="border-bottom: none">
-                Prezime
-            </th>
-            <th class="col-xs-1" style="border-bottom: none;text-align: right">
-            </th>
-        </tr>
+        <thead style="border-bottom:solid; border-bottom-color:darkgray">
+            <tr style="border-bottom: none">
+                <th class="col-xs-4" style="border-bottom: none">
+                    Ime
+                </th>
+                <th class="col-xs-4" style="border-bottom: none">
+                    Prezime
+                </th>
+                <th class="col-xs-1" style="border-bottom: none;text-align: right">
+                </th>
+            </tr>
+        </thead>
         @if (Model != null)
         {
             foreach (var item in Model)
@@ -40,7 +42,7 @@
                         @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td align="right">
-                        <a href="@Url.Action("Edit", new { id = item.Id })" style="margin-right:10px">
+                        <a href="@Url.Action("EditPlayer", new { id = item.Id })" style="margin-right:10px">
                             <i class="glyphicon glyphicon-pencil"></i>
                             <span class="sr-only">Uredi</span>
                         </a>
@@ -61,13 +63,13 @@
                 <b>Prikaz @Html.DropDownList("pageItems", ViewData["ItemsPerPage"] as SelectList, htmlAttributes: new { @class = "input-sm", @style = "width:65px; height:25px" }) po stranici</b>
             </div>
             <div class="col-xs-4" align="right">
-                <a href="@Url.Action("Create")" class="btn btn-primary">
+                <a href="@Url.Action("RegisterExistingPlayerSearch")" class="btn btn-primary">
                     <span class="glyphicon glyphicon-plus-sign"></span>
                     Registriraj postojećeg igrača
                 </a>
             </div>
             <div class="col-xs-2" align="right">
-                <a href="@Url.Action("Create")" class="btn btn-primary">
+                <a href="@Url.Action("RegisterNewPlayer")" class="btn btn-primary">
                     <span class="glyphicon glyphicon-plus-sign"></span>
                     Registriraj novog igrača
                 </a>
