--- a/LeagueAssistWeb/Views/Home/RegisterNewPlayer.cshtml
+++ b/LeagueAssistWeb/Views/Home/RegisterNewPlayer.cshtml
@@ -1,67 +1,177 @@
 ﻿@model LeagueAssistWeb.Models.PlayerDetailsViewModel
 
 @{
-    ViewBag.Title = "RegisterNewPlayer";
+    ViewBag.Title = "Registriraj novog igrača";
 }
 
-<h2>RegisterNewPlayer</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>PlayerDetailsViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.firstName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.firstName, "", new { @class = "text-danger" })
+<h2>@ViewBag.Title</h2>
+<hr />
+<br />
+<div class="row">
+    <div class="col-sm-12">
+        <div class="panel panel-default">
+            <div class="col-sm-12 panel-heading clearfix">
+                <span class="col-sm-6"><b>Podaci o igraču</b></span>
+                <span class="col-sm-6 text-right">
+                </span>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.lastName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.birthDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.birthDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.phone, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <table class="table table-borderless" style="border-top: none">
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Ime:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Email:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Prezime:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Telefon:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Datum rođenja:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-top:none" />
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-}
+</div>
+<hr />
+<br />
+
+<div class="row">
+    <div class="col-sm-12">
+        <div class="panel panel-default">
+            <div class="col-sm-12 panel-heading clearfix">
+                <span class="col-sm-6"><b>Podaci o ugovoru</b></span>
+                <span class="col-sm-6 text-right">
+                </span>
+            </div>
+
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <table class="table table-borderless" style="border-top: none">
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Plaća (god.):</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.contract.annualSalary, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Broj na dresu:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.contract.numberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.contract.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.contract.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Stranac:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.contract.foreigner, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-top:none" />
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr />
+<br />
+
+<div class="row">
+    <div class="col-sm-12">
+        <div class="panel panel-default">
+            <div class="col-sm-12 panel-heading clearfix">
+                <span class="col-sm-6"><b>Podaci o lječnčikom</b></span>
+                <span class="col-sm-6 text-right">
+                </span>
+            </div>
+
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <table class="table table-borderless" style="border-top: none">
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.healthCheck.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.EditorFor(model => model.healthCheck.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                            </td>
+                            <td align="left" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td align="right" class="col-xs-2" style="border-top: none"><b>Napomena:</b></td>
+                            <td align="left" class="col-xs-2" style="border-top: none">
+                                @Html.TextAreaFor(model => model.healthCheck.remark, new { @class = "form-control", @rows = "8" })
+                            </td>
+                            <td align="left" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-2" style="border-top: none"></td>
+                            <td align="right" class="col-xs-4" style="border-top: none"></td>
+                        </tr>
+                        <tr>
+                            <td style="border-top:none" />
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br />
+<p>
+    <div class="form-group">
+        <div class="col-xs-12" align="right">
+            <a href="@Url.Action("Edit")" class="btn btn-success">
+                <span class="glyphicon glyphicon-floppy-save"></span>
+                Registriraj
+            </a>
+        </div>
+    </div>
+</p>
+<br />
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Povratak na popis", "Index")
 </div>
