--- a/LeagueAssistWeb/Views/Shared/_Layout.cshtml
+++ b/LeagueAssistWeb/Views/Shared/_Layout.cshtml
@@ -35,12 +35,12 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Natjecanje<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Liga", "Index", "Home")</li>
-                                <li>@Html.ActionLink("Kup", "Index", "Home")</li>
+                                <li>@Html.ActionLink("Liga", "Index", "League")</li>
+                                <li>@Html.ActionLink("Kup", "Index", "Cup")</li>
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Moje utakmice", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Pretraživanje", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Moje utakmice", "Index", "Match")</li>
+                        <li>@Html.ActionLink("Pretraživanje", "Index", "Search")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -51,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Ratnici s marsa</p>
         </footer>
     </div>
 
