--- a/LeagueAssistWeb/Views/Home/RegisterExistingPlayerSearch.cshtml
+++ b/LeagueAssistWeb/Views/Home/RegisterExistingPlayerSearch.cshtml
@@ -104,10 +104,10 @@
             {
                 <tr>
                     <td>
-                        @item.FirstName
+                        @item.firstName
                     </td>
                     <td>
-                        @item.LastName
+                        @item.lastName
                     </td>
                     <td style="width: 1%;white-space: nowrap;">
                         <button type="button" class="btn btn-success btn-sm" onclick="location.href='@Url.Action("RegisterExistingPlayerSearch", "Home", new { id = @item.Id })'">
