--- a/LeagueAssistWeb/Views/League/Index.cshtml
+++ b/LeagueAssistWeb/Views/League/Index.cshtml
@@ -13,6 +13,13 @@
 {
     <div class="panel-body" style="align-items:center">
         <div class="row">
+            <div class="control-label col-md-2" align="right"><b>Liga</b></div>
+            <div class="col-md-10" align="left">
+                @Html.DropDownList("ligaID", null, htmlAttributes: new { @class = "form-control" })
+            </div>
+        </div>
+        <br />
+        <div class="row">
             <div class="control-label col-md-2" align="right"><b>Sezona</b></div>
             <div class="col-md-10" align="left">
                 @Html.DropDownList("sezonaID", null, htmlAttributes: new { @class = "form-control" })
