--- a/LeagueAssistWeb/Views/Home/EditPlayer.cshtml
+++ b/LeagueAssistWeb/Views/Home/EditPlayer.cshtml
@@ -7,6 +7,9 @@
 <h2>@ViewBag.Title</h2>
 <hr />
 <br />
+
+@using (Html.BeginForm("EditPlayer", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
 <div class="row">
     <div class="col-sm-12">
         <div class="panel panel-default">
@@ -143,7 +146,7 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Napomena:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.TextAreaFor(model => model.healthCheck.remark, new { @class = "form-control", @rows = "8" } )
+                                @Html.TextAreaFor(model => model.healthCheck.remark, new { @class = "form-control", @rows = "8" })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -163,14 +166,12 @@
 <p>
     <div class="form-group">
         <div class="col-xs-12" align="right">
-            <a href="@Url.Action("Edit")" class="btn btn-success">
-                <span class="glyphicon glyphicon-floppy-save"></span>
-                Spremi
-            </a>
+            <input type="submit" value="Spremi" class="btn btn-success glyphicon glyphicon-floppy-save" />
         </div>
     </div>
 </p>
 <br />
+}
 
 <div>
     @Html.ActionLink("Povratak na popis", "Index")
