End player contract

--- a/LeagueAssistWeb/Views/Player/EndPlayerContract.cshtml
+++ b/LeagueAssistWeb/Views/Player/EndPlayerContract.cshtml
@@ -1,14 +1,17 @@
 ﻿@model LeagueAssistWeb.Models.PlayerDetailsViewModel
 
 @{
-    ViewBag.Title = "Uredi podatke o igraču";
+    ViewBag.Title = "Raskini ugovor s igračem";
+    ViewBag.Subtitle = "Jeste li sigurni da želite raskinuti ugovor s ovim igračem?";
 }
 
 <h2>@ViewBag.Title</h2>
+
 <hr />
+<h4>@ViewBag.Subtitle</h4>
 <br />
 
-@using (Html.BeginForm("EditPlayer", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("EndPlayerContract", "Player", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
 <div class="row">
     <div class="col-sm-12">
@@ -25,29 +28,29 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Ime:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DisplayFor(model => model.player.FirstName, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Email:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DisplayFor(model => model.player.Email, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Prezime:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DisplayFor(model => model.player.LastName, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Telefon:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DisplayFor(model => model.player.Phone, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Datum rođenja:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DisplayFor(model => model.player.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -80,73 +83,35 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Plaća (god.):</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.annualSalary, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.contract.Id)
+                                @Html.HiddenFor(model => model.contract.AnnualSalary)
+                                @Html.DisplayFor(model => model.contract.AnnualSalary, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Broj na dresu:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.numberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.contract.NumberOnShirt)
+                                @Html.DisplayFor(model => model.contract.NumberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.contract.DateFrom)
+                                @Html.DisplayFor(model => model.contract.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.contract.DateTo)
+                                @Html.DisplayFor(model => model.contract.DateTo, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Stranac:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.foreigner, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="left" class="col-xs-2" style="border-top: none"></td>
-                            <td align="right" class="col-xs-2" style="border-top: none"></td>
-                            <td align="right" class="col-xs-4" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td style="border-top:none" />
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<hr />
-<br />
-
-<div class="row">
-    <div class="col-sm-12">
-        <div class="panel panel-default">
-            <div class="col-sm-12 panel-heading clearfix">
-                <span class="col-sm-6"><b>Podaci o lječnčikom</b></span>
-                <span class="col-sm-6 text-right">
-                </span>
-            </div>
-
-            <div class="panel-body">
-                <div class="col-md-12">
-                    <table class="table table-borderless" style="border-top: none">
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.healthCheck.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.healthCheck.dateTo, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="left" class="col-xs-4" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Napomena:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.TextAreaFor(model => model.healthCheck.remark, new { @class = "form-control", @rows = "8" })
+                                @Html.HiddenFor(model => model.contract.Foreigner)
+                                @Html.DisplayFor(model => model.contract.Foreigner, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -165,14 +130,15 @@
 <br />
 <p>
     <div class="form-group">
-        <div class="col-xs-12" align="right">
-            <input type="submit" value="Spremi" class="btn btn-success glyphicon glyphicon-floppy-save" />
+        <div class="form-group">
+            <div class="col-xs-12" align="right">
+                <input type="submit" value="Raskini" class="btn btn-danger" />
+            </div>
         </div>
     </div>
 </p>
 <br />
 }
-
-<div>
+<p>
     @Html.ActionLink("Povratak na popis", "Index")
-</div>
+</p>
