--- a/LeagueAssistWeb/Views/Player/EditPlayer.cshtml
+++ b/LeagueAssistWeb/Views/Player/EditPlayer.cshtml
@@ -1,12 +1,15 @@
 ﻿@model LeagueAssistWeb.Models.PlayerDetailsViewModel
 
 @{
-    ViewBag.Title = "Registriraj novog igrača";
+    ViewBag.Title = "Uredi podatke o igraču";
 }
 
 <h2>@ViewBag.Title</h2>
 <hr />
 <br />
+
+@using (Html.BeginForm("EditPlayer", "Player", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
 <div class="row">
     <div class="col-sm-12">
         <div class="panel panel-default">
@@ -22,29 +25,30 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Ime:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.player.Id)
+                                @Html.EditorFor(model => model.player.FirstName, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Email:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.player.Email, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Prezime:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.player.LastName, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Telefon:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.player.Phone, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Datum rođenja:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.player.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -77,29 +81,30 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Plaća (god.):</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.annualSalary, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.contract.Id)
+                                @Html.EditorFor(model => model.contract.AnnualSalary, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Broj na dresu:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.numberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.NumberOnShirt, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.DateTo, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Stranac:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.foreigner, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.Foreigner, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -132,18 +137,19 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.healthCheck.dateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.healthCheck.Id)
+                                @Html.EditorFor(model => model.healthCheck.FromDate, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.healthCheck.dateTo, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.healthCheck.ToDate, new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Napomena:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.TextAreaFor(model => model.healthCheck.remark, new { @class = "form-control", @rows = "8" })
+                                @Html.TextAreaFor(model => model.healthCheck.Remark, new { @class = "form-control", @rows = "8" })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -163,14 +169,12 @@
 <p>
     <div class="form-group">
         <div class="col-xs-12" align="right">
-            <a href="@Url.Action("Edit")" class="btn btn-success">
-                <span class="glyphicon glyphicon-floppy-save"></span>
-                Registriraj
-            </a>
+            <input type="submit" value="Spremi" class="btn btn-success" />
         </div>
     </div>
 </p>
 <br />
+}
 
 <div>
     @Html.ActionLink("Povratak na popis", "Index")
