--- a/LeagueAssistWeb/Views/Shared/_Layout.cshtml
+++ b/LeagueAssistWeb/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 </button>
                 @if (Context.User.Identity.IsAuthenticated)
                 {
-                    @Html.ActionLink("LeagueAssist", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("LeagueAssist", "Index", "Player", new { area = "" }, new { @class = "navbar-brand" })
                 }
                 else
                 {
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav">
                     @if (!Context.User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Početna", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Početna", "Index", "Player")</li>
                         <li>@Html.ActionLink("O klubu", "Details", "About")</li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Natjecanje<span class="caret"></span></a>
